k8s/infrastructure/kube-prometheus-stack/ingressroute-alertmanager.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/description: "Alert routing and silences"
    gethomepage.dev/group: "monitoring"
    gethomepage.dev/icon: "alertmanager.png"
    gethomepage.dev/href: "https://alertmanager.item.fyi"
    gethomepage.dev/siteMonitor: "http://alertmanager-operated.monitoring.svc.cluster.local:9093"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=alertmanager"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: alertmanager-operated
          port: 9093
  tls: {}
