k8s/infrastructure/kube-prometheus-stack/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/description: "Metrics and alerting"
    gethomepage.dev/group: "monitoring"
    gethomepage.dev/icon: "prometheus.png"
    gethomepage.dev/href: "https://prometheus.item.fyi"
    gethomepage.dev/siteMonitor: "http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prometheus"
    gethomepage.dev/widget.type: "prometheus"
    gethomepage.dev/widget.url: "http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
